--- a/Max/Inside out.html
+++ b/Max/Inside out.html
@@ -40,7 +40,7 @@
         </div>
 
         <div class="detailImgTitle">
-            <img id="imgTitle" alt="" src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/2C2CA89E9A9FEC5FE9B2E7CE7EEF10DAA8C6825DF0D03842945D0EA91B19536C/scale?width=1440&aspectRatio=1.78&format=png" />
+            <img class="detailImgTitle2" id="imgTitle" alt="" src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/2C2CA89E9A9FEC5FE9B2E7CE7EEF10DAA8C6825DF0D03842945D0EA91B19536C/scale?width=1440&aspectRatio=1.78&format=png" />
         </div>
         <div class="contentMeta">
             <div class="controls">
@@ -61,7 +61,7 @@
     <div id="videoModal" class="modal">
         <div class="modal-content">
             <span class="close" onclick="closeModal()">&times;</span>
-            <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/wWTQZkD5FAQ?si=SbRzOfog21nJSOAt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe class="videoModalvideo" width="560" height="315" src="https://www.youtube-nocookie.com/embed/wWTQZkD5FAQ?si=SbRzOfog21nJSOAt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
     </div>
 
