--- a/Max/Inside out.html
+++ b/Max/Inside out.html
@@ -40,7 +40,7 @@
         </div>
 
         <div class="detailImgTitle">
-            <img class="detailImgTitle2" id="imgTitle" alt="" src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/2C2CA89E9A9FEC5FE9B2E7CE7EEF10DAA8C6825DF0D03842945D0EA91B19536C/scale?width=1440&aspectRatio=1.78&format=png" />
+            <img id="imgTitle" alt="" src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/2C2CA89E9A9FEC5FE9B2E7CE7EEF10DAA8C6825DF0D03842945D0EA91B19536C/scale?width=1440&aspectRatio=1.78&format=png" />
         </div>
         <div class="contentMeta">
             <div class="controls">
@@ -53,8 +53,6 @@
                     <span>Trailer</span>
                 </button>
             </div>
-            <div class="subTitle"></div>
-            <div class="description"></div>
         </div>
     </div>
 
