--- a/Max/Inside out.html
+++ b/Max/Inside out.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/Inside out.css">
-    <title>Inside Out</title>
+    <title>Inside out</title>
 </head>
 <body>
     <nav>
@@ -44,11 +44,11 @@
         </div>
         <div class="contentMeta">
             <div class="controls">
-                <button class="player">
+                <button class="player" onclick="openVideoModal('https://www.youtube.com/watch?v=YbgNFGigHGk&ab_channel=BibisBeautyPalace')">
                     <img src="assets/images/play-icon-black.png" alt="" />
                     <span>Play</span>
-                </button>
-                <button class="trailer" onclick="openModal()">
+                </button>               
+                <button class="trailer" onclick="openVideoModal('https://www.youtube-nocookie.com/embed/wWTQZkD5FAQ?si=SbRzOfog21nJSOAt')">
                     <img src="assets/images/play-icon-white.png" alt="" />
                     <span>Trailer</span>
                 </button>
@@ -58,10 +58,11 @@
 
     <div id="videoModal" class="modal">
         <div class="modal-content">
-            <span class="close" onclick="closeModal()">&times;</span>
-            <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/wWTQZkD5FAQ?si=SbRzOfog21nJSOAt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <span class="close" onclick="closeVideoModal()">&times;</span>
+            <iframe id="videoIframe" width="560" height="315" title="Video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
     </div>
+
 
     <script src="js/Inside out.js"></script>
 </body>
