--- a/Max/Inside out.html
+++ b/Max/Inside out.html
@@ -44,7 +44,7 @@
         </div>
         <div class="contentMeta">
             <div class="controls">
-                <button class="player" onclick="openVideoModal('https://drive.google.com/file/d/1V3sRBwntO8HbsW_cCpbloxwASt3Aawpn/preview')" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+                <button class="player" onclick="openVideoModal('https://player.vimeo.com/video/893213861?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479')" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" title="Inside out">
                     <img src="assets/images/play-icon-black.png" alt="" />
                     <span>Play</span>
                 </button>
