--- a/Max/Inside out.html
+++ b/Max/Inside out.html
@@ -53,6 +53,13 @@
                     <img src="assets/images/play-icon-white.png" alt="" />
                     <span>Trailer</span>
                 </button>
+
+                <a href="https://player.vimeo.com/progressive_redirect/download/893213861/container/c18147ec-2019-4c0a-a9ec-ac1bb5d0d3aa/d51b13e1-ce122d4b/inside_out%20%28720p%29.mp4?expires=1702307104&loc=external&signature=622d01492e62340b4d84447ffffc7ac6cdab5c32a055e0e95e8be0d32e8829d6" class="button dark-single">
+                    <div>
+                        <svg viewBox="0 0 24 24"></svg>
+                    </div>
+                </a>
+
             </div>
         </div>
     </div>
