--- a/Max/Inside out.html
+++ b/Max/Inside out.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/Inside out.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <title>Inside out</title>
 </head>
 <body>
@@ -44,7 +46,7 @@
         </div>
         <div class="contentMeta">
             <div class="controls">
-                <button class="player" onclick="openVideoModal('https://player.vimeo.com/video/893213861?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479')" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" title="Inside out">
+                <button class="player" onclick="openVideoModal('https://drive.google.com/file/d/1V3sRBwntO8HbsW_cCpbloxwASt3Aawpn/preview')" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" title="Inside out">
                     <img src="assets/images/play-icon-black.png" alt="" />
                     <span>Play</span>
                 </button>
@@ -54,12 +56,11 @@
                     <span>Trailer</span>
                 </button>
 
-                <a href="https://player.vimeo.com/progressive_redirect/download/893213861/container/c18147ec-2019-4c0a-a9ec-ac1bb5d0d3aa/d51b13e1-ce122d4b/inside_out%20%28720p%29.mp4?expires=1702307104&loc=external&signature=622d01492e62340b4d84447ffffc7ac6cdab5c32a055e0e95e8be0d32e8829d6" class="button dark-single">
-                    <div>
-                        <svg viewBox="0 0 24 24"></svg>
-                    </div>
-                </a>
-
+                <button class="download" onclick="downloadMovie()">
+                    <i class="fa-solid fa-arrow-down"></i>
+                    <img alt="" />
+                    <span>Download</span>
+                </button>
             </div>
         </div>
     </div>
@@ -71,6 +72,16 @@
         </div>
     </div>
 
+    <script>
+        function toggleDownload() {
+            var downloadButton = document.querySelector('.download');
+            downloadButton.classList.toggle('active');
+        }
+        function downloadMovie() {
+        var downloadUrl = 'https://drive.google.com/u/0/uc?id=1V3sRBwntO8HbsW_cCpbloxwASt3Aawpn&export=download&confirm=t&uuid=8c1b0f2c-e300-45d3-a552-14938ec63d19&at=AB6BwCAuXcfHDZ2AJNq_ZO3mean-:1702308808116';
+        window.location.href = downloadUrl;
+    }
+    </script>
 
     <script src="js/Inside out.js"></script>
 </body>
