--- a/Milo/index.html
+++ b/Milo/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="https://media.forgecdn.net/avatars/297/687/637345708271977854.png">
     <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
     <link rel="stylesheet" href="css/index.css">
     <title>Disney+ Clone</title>
@@ -110,12 +111,12 @@
                     </a>
                 </div>
                 <div class="recWrap">
-                    <a href="detail.html">
+                    <a href="bao.html">
                         <img src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/706C68FF1CEA5A9C2AE0608892C2DF79E4AC1F0DDB4BFF7FE6DAFC36DAFC0286/scale?width=400&aspectRatio=1.78&format=jpeg" alt="Bao" />
                     </a>
                 </div>
                 <div class="recWrap">
-                    <a href="detail.html">
+                    <a href="incredibles.html">
                         <img src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/C0A883EAB54DDDC924018D08CF4555EE72B3E9A8C214BDADF29CB82B5E2275D7/scale?width=400&aspectRatio=1.78&format=jpeg" alt="Incredibles 2" />
                     </a>
                 </div>
@@ -131,17 +132,17 @@
             <h4>New to Disney+</h4>
             <div class="recommendedContent">
                 <div class="recWrap">
-                    <a href="detail.html">
+                    <a href="garfield a tail of two kitties.html">
                         <img src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/B983FF22BA64B6E19E0D3267280819B26758CFB765E8BED1099D11E320612953/scale?width=400&aspectRatio=1.78&format=jpeg" alt="A tail of two kitties" />
                     </a>
                 </div>
                 <div class="recWrap">
-                    <a href="detail.html">
+                    <a href="Raya und der letzte Drache.html">
                         <img src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/1E0501AFBAFCA1ABB5D31DBA7D1A913B2A35D70FD3DFD804939B71901577161D/scale?width=400&aspectRatio=1.78&format=jpeg" alt="Raya" />
                     </a>
                 </div>
                 <div class="recWrap">
-                    <a href="detail.html">
+                    <a href="The Falcon and the Winter Soldier.html">
                         <img src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/341AE85B6C1423B9042B5F2E786645EE551B9D546C3D263B220A4727617FD2B8/badging?width=400&aspectRatio=1.78&format=jpeg&label=originals" alt="The falcon and the winter soldier" />
                     </a>
                 </div>
@@ -157,7 +158,7 @@
             <h4>Originals</h4>
             <div class="recommendedContent">
                 <div class="recWrap">
-                    <a href="detail.html">
+                    <a href="soul.html">
                         <img src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/E486A02FA7B60669E77958D4FAE567AA5C9C57344006E1D1ADFC080719545166/badging?width=400&aspectRatio=1.78&format=jpeg&label=originals" alt="Soul" />
                     </a>
                 </div>
