--- a/Max/Raya und der letzte Drache.html
+++ b/Max/Raya und der letzte Drache.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/Inside out.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <title>Inside out</title>
+    <title>Raya und der letzte Drache</title>
 </head>
 <body>
     <nav>
@@ -39,11 +39,11 @@
 
     <div class="detail">
         <div class="detailBgImg">
-            <img id="bgImg" alt="" src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/60C7CB7CD64C4E3F91BD7FF492305581D909AB598AAA383A590014DD78D79DA6/scale?width=2880&aspectRatio=1.78&format=jpeg" />
+            <img id="bgImg" alt="" src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/ECE519F95A0D64F3C2FEDE32530FE254ED6F1E49CDCAA507995EA14E4909CC9C/scale?width=1440&aspectRatio=1.78&format=jpeg" />
         </div>
 
         <div class="detailImgTitle">
-            <img id="imgTitle" alt="" src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/2C2CA89E9A9FEC5FE9B2E7CE7EEF10DAA8C6825DF0D03842945D0EA91B19536C/scale?width=1440&aspectRatio=1.78&format=png" />
+            <img id="imgTitle" alt="" src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/24DC5E04147A908B3DEAE25B555769BB956F012765B89DB843E3C0FD7EE507C3/scale?width=1440&aspectRatio=1.78&format=png" />
         </div>
         <div class="contentMeta">
             <div class="controls">
