--- a/Max/incredibles.html
+++ b/Max/incredibles.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/Inside out.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <title>Inside out</title>
+    <title>die Unfassbaren 2</title>
 </head>
 <body>
     <nav>
@@ -39,11 +39,11 @@
 
     <div class="detail">
         <div class="detailBgImg">
-            <img id="bgImg" alt="" src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/60C7CB7CD64C4E3F91BD7FF492305581D909AB598AAA383A590014DD78D79DA6/scale?width=2880&aspectRatio=1.78&format=jpeg" />
+            <img id="bgImg" alt="" src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/17B8FEFFF330AB0624F200C95D501FC576B71BD36398A4CD325254BC3DA8CD15/scale?width=1440&aspectRatio=1.78&format=jpeg" />
         </div>
 
         <div class="detailImgTitle">
-            <img id="imgTitle" alt="" src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/2C2CA89E9A9FEC5FE9B2E7CE7EEF10DAA8C6825DF0D03842945D0EA91B19536C/scale?width=1440&aspectRatio=1.78&format=png" />
+            <img id="imgTitle" alt="" src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/E1D26CB716ABE7A5C406AD6B73B84DFDD1E05A9AECC99DDAB1AAE6AA14CDF72A/scale?width=1440&aspectRatio=1.78&format=png" />
         </div>
         <div class="contentMeta">
             <div class="controls">
