--- a/Milo/The Falcon and the Winter Soldier.html
+++ b/Milo/The Falcon and the Winter Soldier.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/Inside out.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <title>Inside out</title>
+    <title>The Falcon and the Winter Soldier</title>
 </head>
 <body>
     <nav>
@@ -39,11 +39,11 @@
 
     <div class="detail">
         <div class="detailBgImg">
-            <img id="bgImg" alt="" src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/60C7CB7CD64C4E3F91BD7FF492305581D909AB598AAA383A590014DD78D79DA6/scale?width=2880&aspectRatio=1.78&format=jpeg" />
+            <img id="bgImg" alt="" src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/EDA75573F41ABE49CABD2FD1A05242F0B5D78D330C3D3B80FE5337927EC122FB/scale?width=1440&aspectRatio=1.78&format=jpeg" />
         </div>
 
         <div class="detailImgTitle">
-            <img id="imgTitle" alt="" src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/2C2CA89E9A9FEC5FE9B2E7CE7EEF10DAA8C6825DF0D03842945D0EA91B19536C/scale?width=1440&aspectRatio=1.78&format=png" />
+            <img id="imgTitle" alt="" src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/F1C9BDD1D32C2658641DE36D25296F37706E07A1B232AAA2CEC52070BA2378FC/scale?width=1440&aspectRatio=1.78&format=png" />
         </div>
         <div class="contentMeta">
             <div class="controls">
