--- a/Max/garfield a tail of two kitties.html
+++ b/Max/garfield a tail of two kitties.html
@@ -52,7 +52,7 @@
                     <span>Play</span>
                 </button>
                            
-                <button class="trailer" onclick="openVideoModal('https://www.youtube-nocookie.com/embed/wWTQZkD5FAQ?si=SbRzOfog21nJSOAt')">
+                <button class="trailer" onclick="openVideoModal('https://www.youtube.com/embed/HwNvT8P64f0?si=YfpufZk1snpJtw8n')">
                     <img src="assets/images/play-icon-white.png" alt="" />
                     <span>Trailer</span>
                 </button>
