--- a/Max/index.html
+++ b/Max/index.html
@@ -103,11 +103,11 @@
         </div>
 
         <div class="recommends">
-            <h4>Recommended for You</h4>
+            <h4>New to Disney+</h4>
             <div class="recommendedContent">
                 <div class="recWrap">
-                    <a href="Inside out.html">
-                        <img src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/87F1DCF36049558159913ADFD18A800DE1121771540033EC3A7651B8FE154CEB/scale?width=400&aspectRatio=1.78&format=jpeg" alt="Inside Out" />
+                    <a href="james Bond.html">
+                        <img src="https://m.media-amazon.com/images/S/pv-target-images/f6ec00dce1af22f0529d438e8d33fe9d0898b2e0bc8dc4841485fd42a2e4efa4.jpg" alt="Inside Out" />
                     </a>
                 </div>
                 <div class="recWrap">
@@ -129,7 +129,7 @@
         </div>
 
         <div class="recommends">
-            <h4>New to Disney+</h4>
+            <h4>Recommended for You</h4>
             <div class="recommendedContent">
                 <div class="recWrap">
                     <a href="garfield a tail of two kitties.html">
