--- a/Max/The Falcon and the Winter Soldier.html
+++ b/Max/The Falcon and the Winter Soldier.html
@@ -52,7 +52,7 @@
                     <span>Play</span>
                 </button>
                            
-                <button class="trailer" onclick="openVideoModal('https://www.youtube-nocookie.com/embed/wWTQZkD5FAQ?si=SbRzOfog21nJSOAt')">
+                <button class="trailer" onclick="openVideoModal('https://www.youtube.com/embed/JyEt86CMDuE?si=w3uksqih3HeE3mEr')">
                     <img src="assets/images/play-icon-white.png" alt="" />
                     <span>Trailer</span>
                 </button>
