--- a/Max/bao.html
+++ b/Max/bao.html
@@ -52,7 +52,7 @@
                     <span>Play</span>
                 </button>
                            
-                <button class="trailer" onclick="openVideoModal('https://www.youtube-nocookie.com/embed/wWTQZkD5FAQ?si=SbRzOfog21nJSOAt')">
+                <button class="trailer" onclick="openVideoModal('https://www.youtube.com/embed/VK2QbXssjJ0?si=trlxVnHlIFatXxOV')">
                     <img src="assets/images/play-icon-white.png" alt="" />
                     <span>Trailer</span>
                 </button>
