--- a/Milo/Raya und der letzte Drache.html
+++ b/Milo/Raya und der letzte Drache.html
@@ -52,7 +52,7 @@
                     <span>Play</span>
                 </button>
                            
-                <button class="trailer" onclick="openVideoModal('https://www.youtube-nocookie.com/embed/wWTQZkD5FAQ?si=SbRzOfog21nJSOAt')">
+                <button class="trailer" onclick="openVideoModal('https://www.youtube.com/embed/iBStzInoG6Y?si=iaZX8utuGBLKoO6g')">
                     <img src="assets/images/play-icon-white.png" alt="" />
                     <span>Trailer</span>
                 </button>
