--- a/Milo/soul.html
+++ b/Milo/soul.html
@@ -39,7 +39,7 @@
 
     <div class="detail">
         <div class="detailBgImg">
-            <img id="bgImg" alt="" src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/632F9551763753DDCEA1D21467630DDE279EFB8E1226E28F119B70C8C9AACA19/scale?width=1440&aspectRatio=1.78&format=jpeg" />
+            <img id="bgImg" alt="" src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/632F9551763753DDCEA1D21467630DDE279EFB8E1226E28F119B70C8C9AACA19/scale?width=1440&aspectRatio=1.78&format=jpeg"/>
         </div>
 
         <div class="detailImgTitle">
@@ -52,7 +52,7 @@
                     <span>Play</span>
                 </button>
                            
-                <button class="trailer" onclick="openVideoModal('https://www.youtube-nocookie.com/embed/wWTQZkD5FAQ?si=SbRzOfog21nJSOAt')">
+                <button class="trailer" onclick="openVideoModal('https://www.youtube.com/embed/_hXw9dxvZo0?si=jAl7N1OVb4Mu8NP3')">
                     <img src="assets/images/play-icon-white.png" alt="" />
                     <span>Trailer</span>
                 </button>
