--- a/Max/index.html
+++ b/Max/index.html
@@ -106,17 +106,17 @@
             <h4>New to Disney+</h4>
             <div class="recommendedContent">
                 <div class="recWrap">
-                    <a href="james Bond.html">
+                    <a href="james Bond/">
                         <img src="https://m.media-amazon.com/images/S/pv-target-images/f6ec00dce1af22f0529d438e8d33fe9d0898b2e0bc8dc4841485fd42a2e4efa4.jpg" alt="Inside Out" />
                     </a>
                 </div>
                 <div class="recWrap">
-                    <a href="bao.html">
-                        <img src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/706C68FF1CEA5A9C2AE0608892C2DF79E4AC1F0DDB4BFF7FE6DAFC36DAFC0286/scale?width=400&aspectRatio=1.78&format=jpeg" alt="Bao" />
+                    <a href="Indiana Jones/">
+                        <img src="https://m.media-amazon.com/images/S/pv-target-images/a2e83a996b7b563ab87a24c65f7d1489db8f02678861a3b7ca8e26356ec04218.jpg" alt="Bao" />
                     </a>
                 </div>
                 <div class="recWrap">
-                    <a href="incredibles.html">
+                    <a href="incredibles 2/">
                         <img src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/C0A883EAB54DDDC924018D08CF4555EE72B3E9A8C214BDADF29CB82B5E2275D7/scale?width=400&aspectRatio=1.78&format=jpeg" alt="Incredibles 2" />
                     </a>
                 </div>
@@ -132,17 +132,17 @@
             <h4>Recommended for You</h4>
             <div class="recommendedContent">
                 <div class="recWrap">
-                    <a href="garfield a tail of two kitties.html">
+                    <a href="garfield a tail of two kitties/">
                         <img src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/B983FF22BA64B6E19E0D3267280819B26758CFB765E8BED1099D11E320612953/scale?width=400&aspectRatio=1.78&format=jpeg" alt="A tail of two kitties" />
                     </a>
                 </div>
                 <div class="recWrap">
-                    <a href="Raya und der letzte Drache.html">
+                    <a href="Raya und der letzte Drache/">
                         <img src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/1E0501AFBAFCA1ABB5D31DBA7D1A913B2A35D70FD3DFD804939B71901577161D/scale?width=400&aspectRatio=1.78&format=jpeg" alt="Raya" />
                     </a>
                 </div>
                 <div class="recWrap">
-                    <a href="The Falcon and the Winter Soldier.html">
+                    <a href="The Falcon and the Winter Soldier/">
                         <img src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/341AE85B6C1423B9042B5F2E786645EE551B9D546C3D263B220A4727617FD2B8/badging?width=400&aspectRatio=1.78&format=jpeg&label=originals" alt="The falcon and the winter soldier" />
                     </a>
                 </div>
@@ -158,7 +158,7 @@
             <h4>Originals</h4>
             <div class="recommendedContent">
                 <div class="recWrap">
-                    <a href="soul.html">
+                    <a href="soul/">
                         <img src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/E486A02FA7B60669E77958D4FAE567AA5C9C57344006E1D1ADFC080719545166/badging?width=400&aspectRatio=1.78&format=jpeg&label=originals" alt="Soul" />
                     </a>
                 </div>
