--- a/Max/james Bond/index.html
+++ b/Max/james Bond/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="https://media.forgecdn.net/avatars/297/687/637345708271977854.png">
-    <link rel="stylesheet" href="css/Inside out.css">
+    <link rel="stylesheet" href="../css/Inside out.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <title>Keine Zeit zu sterben</title>
@@ -13,24 +13,24 @@
 <body>
     <nav>
         <a class="navLogo" href="../index.html">
-            <img src="assets/images/logo.svg" alt="Disney+" />
+            <img src="../assets/images/logo.svg" alt="Disney+" />
         </a>
         <div class="navMenu">
-            <a href="index.html">
-                <img src="assets/images/home-icon.svg" alt="HOME" />
+            <a href="../index.html">
+                <img src="../assets/images/home-icon.svg" alt="HOME" />
                 <span>HOME</span>
             </a>
             <a class="mobile-hide">
-                <img src="assets/images/movie-icon.svg" alt="MOVIES" />
+                <img src="../assets/images/movie-icon.svg" alt="MOVIES" />
                 <span>MOVIES</span>
             </a>
             <a class="mobile-hide">
-                <img src="assets/images/series-icon.svg" alt="SERIES" />
+                <img src="../assets/images/series-icon.svg" alt="SERIES" />
                 <span>SERIES</span>
             </a>
         </div>
         <div class="signOut">
-            <img class="userImg" src="assets/images/avatar.png" alt="avatar" />
+            <img class="userImg" src="../assets/images/avatar.png" alt="avatar" />
             <div class="dropDown">
                 <a href="../index.html"> Konto Wechseln </a>
             </div>
@@ -48,12 +48,12 @@
         <div class="contentMeta">
             <div class="controls">
                 <button class="player" onclick="openVideoModal('https://drive.google.com/file/d/1hbsxP_-nn2dVLfitRF6p99ZPJsAOHuhz/preview')" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" title="Inside out">
-                    <img src="assets/images/play-icon-black.png" alt="" />
+                    <img src="../assets/images/play-icon-black.png" alt="" />
                     <span>Play</span>
                 </button>
                            
                 <button class="trailer" onclick="openVideoModal('https://www.youtube.com/embed/jE-LhbK4Ug4?si=LZlZMhvKStY5Jn8b')">
-                    <img src="assets/images/play-icon-white.png" alt="" />
+                    <img src="../assets/images/play-icon-white.png" alt="" />
                     <span>Trailer</span>
                 </button>
 
