--- a/Milo/Inside out/index.html
+++ b/Milo/Inside out/index.html
@@ -5,32 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="https://media.forgecdn.net/avatars/297/687/637345708271977854.png">
-    <link rel="stylesheet" href="css/Inside out.css">
+    <link rel="stylesheet" href="../css/Inside out.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <title>Soul</title>
+    <title>Inside out</title>
 </head>
 <body>
     <nav>
         <a class="navLogo" href="../index.html">
-            <img src="assets/images/logo.svg" alt="Disney+" />
+            <img src="../assets/images/logo.svg" alt="Disney+" />
         </a>
         <div class="navMenu">
             <a href="index.html">
-                <img src="assets/images/home-icon.svg" alt="HOME" />
+                <img src="../assets/images/home-icon.svg" alt="HOME" />
                 <span>HOME</span>
             </a>
             <a class="mobile-hide">
-                <img src="assets/images/movie-icon.svg" alt="MOVIES" />
+                <img src="../assets/images/movie-icon.svg" alt="MOVIES" />
                 <span>MOVIES</span>
             </a>
             <a class="mobile-hide">
-                <img src="assets/images/series-icon.svg" alt="SERIES" />
+                <img src="../assets/images/series-icon.svg" alt="SERIES" />
                 <span>SERIES</span>
             </a>
         </div>
         <div class="signOut">
-            <img class="userImg" src="assets/images/avatar.png" alt="avatar" />
+            <img class="userImg" src="../assets/images/avatar.png" alt="avatar" />
             <div class="dropDown">
                 <a href="../index.html"> Konto Wechseln </a>
             </div>
@@ -39,21 +39,21 @@
 
     <div class="detail">
         <div class="detailBgImg">
-            <img id="bgImg" alt="" src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/632F9551763753DDCEA1D21467630DDE279EFB8E1226E28F119B70C8C9AACA19/scale?width=1440&aspectRatio=1.78&format=jpeg"/>
+            <img id="bgImg" alt="" src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/60C7CB7CD64C4E3F91BD7FF492305581D909AB598AAA383A590014DD78D79DA6/scale?width=2880&aspectRatio=1.78&format=jpeg" />
         </div>
 
         <div class="detailImgTitle">
-            <img id="imgTitle" alt="" src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/3BC76ECFDD85C263F111DF84A14AE06F2DCBE64DFDA2CBFE4051F4781A3C4AF7/scale?width=1440&aspectRatio=1.78&format=png" />
+            <img id="imgTitle" alt="" src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/2C2CA89E9A9FEC5FE9B2E7CE7EEF10DAA8C6825DF0D03842945D0EA91B19536C/scale?width=1440&aspectRatio=1.78&format=png" />
         </div>
         <div class="contentMeta">
             <div class="controls">
                 <button class="player" onclick="openVideoModal('https://drive.google.com/file/d/1V3sRBwntO8HbsW_cCpbloxwASt3Aawpn/preview')" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" title="Inside out">
-                    <img src="assets/images/play-icon-black.png" alt="" />
+                    <img src="../assets/images/play-icon-black.png" alt="" />
                     <span>Play</span>
                 </button>
                            
-                <button class="trailer" onclick="openVideoModal('https://www.youtube.com/embed/_hXw9dxvZo0?si=jAl7N1OVb4Mu8NP3')">
-                    <img src="assets/images/play-icon-white.png" alt="" />
+                <button class="trailer" onclick="openVideoModal('https://www.youtube-nocookie.com/embed/wWTQZkD5FAQ?si=SbRzOfog21nJSOAt')">
+                    <img src="../assets/images/play-icon-white.png" alt="" />
                     <span>Trailer</span>
                 </button>
 
