--- a/Milo/Raya und der letzte Drache/index.html
+++ b/Milo/Raya und der letzte Drache/index.html
@@ -5,32 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="https://media.forgecdn.net/avatars/297/687/637345708271977854.png">
-    <link rel="stylesheet" href="css/Inside out.css">
+    <link rel="stylesheet" href="../css/Inside out.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <title>Inside out</title>
+    <title>Raya und der letzte Drache</title>
 </head>
 <body>
     <nav>
         <a class="navLogo" href="../index.html">
-            <img src="assets/images/logo.svg" alt="Disney+" />
+            <img src="../assets/images/logo.svg" alt="Disney+" />
         </a>
         <div class="navMenu">
             <a href="index.html">
-                <img src="assets/images/home-icon.svg" alt="HOME" />
+                <img src="../assets/images/home-icon.svg" alt="HOME" />
                 <span>HOME</span>
             </a>
             <a class="mobile-hide">
-                <img src="assets/images/movie-icon.svg" alt="MOVIES" />
+                <img src="../assets/images/movie-icon.svg" alt="MOVIES" />
                 <span>MOVIES</span>
             </a>
             <a class="mobile-hide">
-                <img src="assets/images/series-icon.svg" alt="SERIES" />
+                <img src="../assets/images/series-icon.svg" alt="SERIES" />
                 <span>SERIES</span>
             </a>
         </div>
         <div class="signOut">
-            <img class="userImg" src="assets/images/avatar.png" alt="avatar" />
+            <img class="userImg" src="../assets/images/avatar.png" alt="avatar" />
             <div class="dropDown">
                 <a href="../index.html"> Konto Wechseln </a>
             </div>
@@ -39,21 +39,21 @@
 
     <div class="detail">
         <div class="detailBgImg">
-            <img id="bgImg" alt="" src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/60C7CB7CD64C4E3F91BD7FF492305581D909AB598AAA383A590014DD78D79DA6/scale?width=2880&aspectRatio=1.78&format=jpeg" />
+            <img id="bgImg" alt="" src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/ECE519F95A0D64F3C2FEDE32530FE254ED6F1E49CDCAA507995EA14E4909CC9C/scale?width=1440&aspectRatio=1.78&format=jpeg" />
         </div>
 
         <div class="detailImgTitle">
-            <img id="imgTitle" alt="" src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/2C2CA89E9A9FEC5FE9B2E7CE7EEF10DAA8C6825DF0D03842945D0EA91B19536C/scale?width=1440&aspectRatio=1.78&format=png" />
+            <img id="imgTitle" alt="" src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/24DC5E04147A908B3DEAE25B555769BB956F012765B89DB843E3C0FD7EE507C3/scale?width=1440&aspectRatio=1.78&format=png" />
         </div>
         <div class="contentMeta">
             <div class="controls">
-                <button class="player" onclick="openVideoModal('https://drive.google.com/file/d/1V3sRBwntO8HbsW_cCpbloxwASt3Aawpn/preview')" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" title="Inside out">
-                    <img src="assets/images/play-icon-black.png" alt="" />
+                <button class="player" onclick="openVideoModal('https://drive.google.com/file/d/1JZwy7I4wW0AMkT0JdR422AhIbWNBNTnx/preview')" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" title="Inside out">
+                    <img src="../assets/images/play-icon-black.png" alt="" />
                     <span>Play</span>
                 </button>
                            
-                <button class="trailer" onclick="openVideoModal('https://www.youtube-nocookie.com/embed/wWTQZkD5FAQ?si=SbRzOfog21nJSOAt')">
-                    <img src="assets/images/play-icon-white.png" alt="" />
+                <button class="trailer" onclick="openVideoModal('https://www.youtube.com/embed/iBStzInoG6Y?si=iaZX8utuGBLKoO6g')">
+                    <img src="../assets/images/play-icon-white.png" alt="" />
                     <span>Trailer</span>
                 </button>
 
@@ -79,7 +79,7 @@
             downloadButton.classList.toggle('active');
         }
         function downloadMovie() {
-        var downloadUrl = 'https://drive.google.com/u/0/uc?id=1V3sRBwntO8HbsW_cCpbloxwASt3Aawpn&export=download&confirm=t&uuid=8c1b0f2c-e300-45d3-a552-14938ec63d19&at=AB6BwCAuXcfHDZ2AJNq_ZO3mean-:1702308808116';
+        var downloadUrl = 'https://drive.google.com/u/0/uc?id=1JZwy7I4wW0AMkT0JdR422AhIbWNBNTnx&export=download&confirm=t&uuid=37415588-1281-4daa-9ea2-b5298ac64d97&at=AB6BwCBGBbWmXymkYx8GILCmBRGN:1702406142858';
         window.location.href = downloadUrl;
     }
     </script>
