--- a/Milo/The Falcon and the Winter Soldier/index.html
+++ b/Milo/The Falcon and the Winter Soldier/index.html
@@ -5,32 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="https://media.forgecdn.net/avatars/297/687/637345708271977854.png">
-    <link rel="stylesheet" href="css/Inside out.css">
+    <link rel="stylesheet" href="../css/Inside out.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <title>bao</title>
+    <title>The Falcon and the Winter Soldier</title>
 </head>
 <body>
     <nav>
         <a class="navLogo" href="../index.html">
-            <img src="assets/images/logo.svg" alt="Disney+" />
+            <img src="../assets/images/logo.svg" alt="Disney+" />
         </a>
         <div class="navMenu">
             <a href="index.html">
-                <img src="assets/images/home-icon.svg" alt="HOME" />
+                <img src="../assets/images/home-icon.svg" alt="HOME" />
                 <span>HOME</span>
             </a>
             <a class="mobile-hide">
-                <img src="assets/images/movie-icon.svg" alt="MOVIES" />
+                <img src="../assets/images/movie-icon.svg" alt="MOVIES" />
                 <span>MOVIES</span>
             </a>
             <a class="mobile-hide">
-                <img src="assets/images/series-icon.svg" alt="SERIES" />
+                <img src="../assets/images/series-icon.svg" alt="SERIES" />
                 <span>SERIES</span>
             </a>
         </div>
         <div class="signOut">
-            <img class="userImg" src="assets/images/avatar.png" alt="avatar" />
+            <img class="userImg" src="../assets/images/avatar.png" alt="avatar" />
             <div class="dropDown">
                 <a href="../index.html"> Konto Wechseln </a>
             </div>
@@ -39,21 +39,21 @@
 
     <div class="detail">
         <div class="detailBgImg">
-            <img id="bgImg" alt="" src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/01E9C350B3AF0CE78F4593292146E5172FF912C861158EF17505E8FD94118571/scale?width=1440&aspectRatio=1.78&format=jpeg" />
+            <img id="bgImg" alt="" src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/EDA75573F41ABE49CABD2FD1A05242F0B5D78D330C3D3B80FE5337927EC122FB/scale?width=1440&aspectRatio=1.78&format=jpeg" />
         </div>
 
         <div class="detailImgTitle">
-            <img id="imgTitle" alt="" src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/F88C5D5330F13D34519AF4C4ADA2EC985B6766E4E74C121ABD5EC8C77B7A15AA/scale?width=1440&aspectRatio=1.78&format=png" />
+            <img id="imgTitle" alt="" src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/F1C9BDD1D32C2658641DE36D25296F37706E07A1B232AAA2CEC52070BA2378FC/scale?width=1440&aspectRatio=1.78&format=png" />
         </div>
         <div class="contentMeta">
             <div class="controls">
                 <button class="player" onclick="openVideoModal('https://drive.google.com/file/d/1V3sRBwntO8HbsW_cCpbloxwASt3Aawpn/preview')" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" title="Inside out">
-                    <img src="assets/images/play-icon-black.png" alt="" />
+                    <img src="../assets/images/play-icon-black.png" alt="" />
                     <span>Play</span>
                 </button>
                            
-                <button class="trailer" onclick="openVideoModal('https://www.youtube.com/embed/VK2QbXssjJ0?si=trlxVnHlIFatXxOV')">
-                    <img src="assets/images/play-icon-white.png" alt="" />
+                <button class="trailer" onclick="openVideoModal('https://www.youtube.com/embed/JyEt86CMDuE?si=w3uksqih3HeE3mEr')">
+                    <img src="../assets/images/play-icon-white.png" alt="" />
                     <span>Trailer</span>
                 </button>
 
