--- a/Milo/soul/index.html
+++ b/Milo/soul/index.html
@@ -5,32 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="https://media.forgecdn.net/avatars/297/687/637345708271977854.png">
-    <link rel="stylesheet" href="css/Inside out.css">
+    <link rel="stylesheet" href="../css/Inside out.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <title>Keine Zeit zu sterben</title>
+    <title>Soul</title>
 </head>
 <body>
     <nav>
         <a class="navLogo" href="../index.html">
-            <img src="assets/images/logo.svg" alt="Disney+" />
+            <img src="../assets/images/logo.svg" alt="Disney+" />
         </a>
         <div class="navMenu">
             <a href="index.html">
-                <img src="assets/images/home-icon.svg" alt="HOME" />
+                <img src="../assets/images/home-icon.svg" alt="HOME" />
                 <span>HOME</span>
             </a>
             <a class="mobile-hide">
-                <img src="assets/images/movie-icon.svg" alt="MOVIES" />
+                <img src="../assets/images/movie-icon.svg" alt="MOVIES" />
                 <span>MOVIES</span>
             </a>
             <a class="mobile-hide">
-                <img src="assets/images/series-icon.svg" alt="SERIES" />
+                <img src="../assets/images/series-icon.svg" alt="SERIES" />
                 <span>SERIES</span>
             </a>
         </div>
         <div class="signOut">
-            <img class="userImg" src="assets/images/avatar.png" alt="avatar" />
+            <img class="userImg" src="../assets/images/avatar.png" alt="avatar" />
             <div class="dropDown">
                 <a href="../index.html"> Konto Wechseln </a>
             </div>
@@ -39,21 +39,21 @@
 
     <div class="detail">
         <div class="detailBgImg">
-            <img id="bgImg" alt="" src="https://images-eu.ssl-images-amazon.com/images/S/pv-target-images/625328ddf92cac663d35f44b3496284663cb9288a87051df62bcbaa59d2dcc1b._RI_TTW_SX1080_FMpng_.png" />
+            <img id="bgImg" alt="" src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/632F9551763753DDCEA1D21467630DDE279EFB8E1226E28F119B70C8C9AACA19/scale?width=1440&aspectRatio=1.78&format=jpeg"/>
         </div>
 
         <div class="detailImgTitle">
-            <img id="imgTitle" alt="" src="https://images-eu.ssl-images-amazon.com/images/S/pv-target-images/d48a0f5729ed9018b7769cdca4855d0d21f019d5a5dcf8d3d2ea5d72e7d989f9._SX600_FMpng_.png" />
+            <img id="imgTitle" alt="" src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/3BC76ECFDD85C263F111DF84A14AE06F2DCBE64DFDA2CBFE4051F4781A3C4AF7/scale?width=1440&aspectRatio=1.78&format=png" />
         </div>
         <div class="contentMeta">
             <div class="controls">
-                <button class="player" onclick="openVideoModal('https://drive.google.com/file/d/1hbsxP_-nn2dVLfitRF6p99ZPJsAOHuhz/preview')" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" title="Inside out">
-                    <img src="assets/images/play-icon-black.png" alt="" />
+                <button class="player" onclick="openVideoModal('https://drive.google.com/file/d/1V3sRBwntO8HbsW_cCpbloxwASt3Aawpn/preview')" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" title="Inside out">
+                    <img src="../assets/images/play-icon-black.png" alt="" />
                     <span>Play</span>
                 </button>
                            
-                <button class="trailer" onclick="openVideoModal('https://www.youtube.com/embed/jE-LhbK4Ug4?si=LZlZMhvKStY5Jn8b')">
-                    <img src="assets/images/play-icon-white.png" alt="" />
+                <button class="trailer" onclick="openVideoModal('https://www.youtube.com/embed/_hXw9dxvZo0?si=jAl7N1OVb4Mu8NP3')">
+                    <img src="../assets/images/play-icon-white.png" alt="" />
                     <span>Trailer</span>
                 </button>
 
@@ -79,7 +79,7 @@
             downloadButton.classList.toggle('active');
         }
         function downloadMovie() {
-        var downloadUrl = 'https://drive.google.com/u/0/uc?id=1hbsxP_-nn2dVLfitRF6p99ZPJsAOHuhz&export=download&confirm=t&uuid=406771bc-b033-4848-a4f7-6825c8af4952&at=AB6BwCB6AEIZUz7an7ku1x_bOqEH:1702329080249';
+        var downloadUrl = 'https://drive.google.com/u/0/uc?id=1V3sRBwntO8HbsW_cCpbloxwASt3Aawpn&export=download&confirm=t&uuid=8c1b0f2c-e300-45d3-a552-14938ec63d19&at=AB6BwCAuXcfHDZ2AJNq_ZO3mean-:1702308808116';
         window.location.href = downloadUrl;
     }
     </script>
