--- a/Milo/index.html
+++ b/Milo/index.html
@@ -106,7 +106,7 @@
             <h4>Recommended for You</h4>
             <div class="recommendedContent">
                 <div class="recWrap">
-                    <a href="Inside out/">
+                    <a href="inside-out/">
                         <img src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/87F1DCF36049558159913ADFD18A800DE1121771540033EC3A7651B8FE154CEB/scale?width=400&aspectRatio=1.78&format=jpeg" alt="Inside Out" />
                     </a>
                 </div>
@@ -116,7 +116,7 @@
                     </a>
                 </div>
                 <div class="recWrap">
-                    <a href="incredibles 2/">
+                    <a href="incredibles-2/">
                         <img src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/C0A883EAB54DDDC924018D08CF4555EE72B3E9A8C214BDADF29CB82B5E2275D7/scale?width=400&aspectRatio=1.78&format=jpeg" alt="Incredibles 2" />
                     </a>
                 </div>
@@ -132,17 +132,17 @@
             <h4>New to Disney+</h4>
             <div class="recommendedContent">
                 <div class="recWrap">
-                    <a href="garfield a tail of two kitties/">
+                    <a href="garfield-a-tail-of-two-kitties/">
                         <img src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/B983FF22BA64B6E19E0D3267280819B26758CFB765E8BED1099D11E320612953/scale?width=400&aspectRatio=1.78&format=jpeg" alt="A tail of two kitties" />
                     </a>
                 </div>
                 <div class="recWrap">
-                    <a href="Raya und der letzte Drache/">
+                    <a href="raya-und-der-letzte-drache/">
                         <img src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/1E0501AFBAFCA1ABB5D31DBA7D1A913B2A35D70FD3DFD804939B71901577161D/scale?width=400&aspectRatio=1.78&format=jpeg" alt="Raya" />
                     </a>
                 </div>
                 <div class="recWrap">
-                    <a href="The Falcon and the Winter Soldier/">
+                    <a href="the-falcon-and-the-winter-soldier/">
                         <img src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/341AE85B6C1423B9042B5F2E786645EE551B9D546C3D263B220A4727617FD2B8/badging?width=400&aspectRatio=1.78&format=jpeg&label=originals" alt="The falcon and the winter soldier" />
                     </a>
                 </div>
