--- a/Max/indiana-jones/index.html
+++ b/Max/indiana-jones/index.html
@@ -47,12 +47,12 @@
         </div>
         <div class="contentMeta">
             <div class="controls">
-                <button class="player" onclick="openVideoModal('https://drive.google.com/file/d/1V3sRBwntO8HbsW_cCpbloxwASt3Aawpn/preview')" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" title="Inside out">
+                <button class="player" onclick="openVideoModal('https://drive.google.com/file/d/1Nddcx9dAxVp5JJD6-a_-cJuMG6s96mRS/preview')" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" title="Inside out">
                     <img src="../assets/images/play-icon-black.png" alt="" />
                     <span>Play</span>
                 </button>
                            
-                <button class="trailer" onclick="openVideoModal('https://www.youtube.com/embed/_hXw9dxvZo0?si=jAl7N1OVb4Mu8NP3')">
+                <button class="trailer" onclick="openVideoModal('https://www.youtube.com/embed/mAWdeTYHA18?si=rd5z9twyLiKmjX5y')">
                     <img src="../assets/images/play-icon-white.png" alt="" />
                     <span>Trailer</span>
                 </button>
@@ -79,11 +79,11 @@
             downloadButton.classList.toggle('active');
         }
         function downloadMovie() {
-        var downloadUrl = 'https://drive.google.com/u/0/uc?id=1V3sRBwntO8HbsW_cCpbloxwASt3Aawpn&export=download&confirm=t&uuid=8c1b0f2c-e300-45d3-a552-14938ec63d19&at=AB6BwCAuXcfHDZ2AJNq_ZO3mean-:1702308808116';
+        var downloadUrl = 'https://drive.google.com/u/0/uc?id=1Nddcx9dAxVp5JJD6-a_-cJuMG6s96mRS&export=download&confirm=t&uuid=83c712a7-1ea9-4102-9ec6-5530b8d04378&at=AB6BwCCAMrhxWumc7gwqg5jZuDsy:1702414703907';
         window.location.href = downloadUrl;
     }
     </script>
 
-    <script src="js/Inside out.js"></script>
+    <script src="../js/Inside out.js"></script>
 </body>
 </html>
