--- a/Milo/garfield-a-tail-of-two-kitties/index.html
+++ b/Milo/garfield-a-tail-of-two-kitties/index.html
@@ -84,6 +84,6 @@
     }
     </script>
 
-    <script src="js/Inside out.js"></script>
+    <script src="../js/Inside out.js"></script>
 </body>
 </html>
