--- a/Milo/incredibles-2/index.html
+++ b/Milo/incredibles-2/index.html
@@ -17,7 +17,7 @@
         </a>
         <div class="navMenu">
             <a href="../index.html">
-                <img src="assets/images/home-icon.svg" alt="HOME" />
+                <img src="../assets/images/home-icon.svg" alt="HOME" />
                 <span>HOME</span>
             </a>
             <a class="mobile-hide">
@@ -47,7 +47,7 @@
         </div>
         <div class="contentMeta">
             <div class="controls">
-                <button class="player" onclick="openVideoModal('https://drive.google.com/file/d/1V3sRBwntO8HbsW_cCpbloxwASt3Aawpn/preview')" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" title="Inside out">
+                <button class="player" onclick="openVideoModal('https://drive.google.com/file/d/1C8DoWtDKptn5TYdVQvJwMt5ySHuLPuoa/preview')" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" title="Inside out">
                     <img src="../assets/images/play-icon-black.png" alt="" />
                     <span>Play</span>
                 </button>
@@ -84,6 +84,6 @@
     }
     </script>
 
-    <script src="js/Inside out.js"></script>
+    <script src="../js/Inside out.js"></script>
 </body>
 </html>
