--- a/Milo/transformers-aufstieg-der-bestien/index.html
+++ b/Milo/transformers-aufstieg-der-bestien/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="https://media.forgecdn.net/avatars/297/687/637345708271977854.png">
-    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="../css/Inside out.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <title>bao</title>
+    <title>Transformers Aufstieg der Bestien</title>
 </head>
 <body>
     <nav>
@@ -16,7 +16,7 @@
             <img src="../assets/images/logo.svg" alt="Disney+" />
         </a>
         <div class="navMenu">
-            <a href="index.html">
+            <a href="../index.html">
                 <img src="../assets/images/home-icon.svg" alt="HOME" />
                 <span>HOME</span>
             </a>
@@ -39,20 +39,20 @@
 
     <div class="detail">
         <div class="detailBgImg">
-            <img id="bgImg" alt="" src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/01E9C350B3AF0CE78F4593292146E5172FF912C861158EF17505E8FD94118571/scale?width=1440&aspectRatio=1.78&format=jpeg" />
+            <img id="bgImg" alt="" src="https://image.tmdb.org/t/p/original/2vFuG6bWGyQUzYS9d69E5l85nIz.jpg" />
         </div>
 
         <div class="detailImgTitle">
-            <img id="imgTitle" alt="" src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/F88C5D5330F13D34519AF4C4ADA2EC985B6766E4E74C121ABD5EC8C77B7A15AA/scale?width=1440&aspectRatio=1.78&format=png" />
+            <img id="imgTitle" alt="" src="https://images-eu.ssl-images-amazon.com/images/S/pv-target-images/5c38cb91fbb9a4df84a6a9dbac59ea7c4625dee402219177399ab6c6485cde8a._SX900_FMpng_.png" />
         </div>
         <div class="contentMeta">
             <div class="controls">
-                <button class="player" onclick="openVideoModal('https://drive.google.com/file/d/1V3sRBwntO8HbsW_cCpbloxwASt3Aawpn/preview')" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" title="Inside out">
+                <button class="player" onclick="openVideoModal('https://supervideo.tv/ce9mn2lsedk2')" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" title="Inside out">
                     <img src="../assets/images/play-icon-black.png" alt="" />
                     <span>Play</span>
                 </button>
                            
-                <button class="trailer" onclick="openVideoModal('https://www.youtube.com/embed/VK2QbXssjJ0?si=trlxVnHlIFatXxOV')">
+                <button class="trailer" onclick="openVideoModal('https://www.youtube.com/embed/HJEYvRhEWk4?si=ImOJI5nxH037rGSo')">
                     <img src="../assets/images/play-icon-white.png" alt="" />
                     <span>Trailer</span>
                 </button>
@@ -79,7 +79,7 @@
             downloadButton.classList.toggle('active');
         }
         function downloadMovie() {
-        var downloadUrl = 'https://drive.google.com/u/0/uc?id=1V3sRBwntO8HbsW_cCpbloxwASt3Aawpn&export=download&confirm=t&uuid=8c1b0f2c-e300-45d3-a552-14938ec63d19&at=AB6BwCAuXcfHDZ2AJNq_ZO3mean-:1702308808116';
+        var downloadUrl = 'https://drive.google.com/u/0/uc?id=12kI-sMvDfLgX0zpJobSmIcn4JqTSODn3&export=download&confirm=t&uuid=18ece507-7660-43c7-9ef1-4cbbea9e68e9&at=AB6BwCAda93AVBIROtgd6Nm_9QYF:1702637676739';
         window.location.href = downloadUrl;
     }
     </script>
