--- a/Max/index.html
+++ b/Max/index.html
@@ -107,17 +107,17 @@
             <div class="recommendedContent">
                 <div class="recWrap">
                     <a href="james-bond/">
-                        <img src="https://m.media-amazon.com/images/S/pv-target-images/f6ec00dce1af22f0529d438e8d33fe9d0898b2e0bc8dc4841485fd42a2e4efa4.jpg" alt="Inside Out" />
+                        <img src="https://m.media-amazon.com/images/S/pv-target-images/f6ec00dce1af22f0529d438e8d33fe9d0898b2e0bc8dc4841485fd42a2e4efa4.jpg" alt="James Bond" />
                     </a>
                 </div>
                 <div class="recWrap">
                     <a href="indiana-jones/">
-                        <img src="https://m.media-amazon.com/images/S/pv-target-images/a2e83a996b7b563ab87a24c65f7d1489db8f02678861a3b7ca8e26356ec04218.jpg" alt="Bao" />
+                        <img src="https://m.media-amazon.com/images/S/pv-target-images/a2e83a996b7b563ab87a24c65f7d1489db8f02678861a3b7ca8e26356ec04218.jpg" alt="Indiana Jones" />
                     </a>
                 </div>
                 <div class="recWrap">
-                    <a href="incredibles-2/">
-                        <img src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/C0A883EAB54DDDC924018D08CF4555EE72B3E9A8C214BDADF29CB82B5E2275D7/scale?width=400&aspectRatio=1.78&format=jpeg" alt="Incredibles 2" />
+                    <a href="oppenheimer/">
+                        <img src="https://m.media-amazon.com/images/S/pv-target-images/d227096f638e01167a4cfff2f2aad3beb62f6d9676b95bb56bc72ba286c208af.jpg" alt="Oppenheimer" />
                     </a>
                 </div>
                 <div class="recWrap">
