--- a/Max/raya-und-der-letzte-drache/index.html
+++ b/Max/raya-und-der-letzte-drache/index.html
@@ -16,7 +16,7 @@
             <img src="../assets/images/logo.svg" alt="Disney+" />
         </a>
         <div class="navMenu">
-            <a href="index.html">
+            <a href="../index.html">
                 <img src="../assets/images/home-icon.svg" alt="HOME" />
                 <span>HOME</span>
             </a>
