--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
   <div class="profile-container">
     <div class="profile-card" onclick="selectProfile('profile1')">
-      <img src="profile1.png" alt="Profile 1">
+      <img src="Max/assets/images/avatar.png" alt="Profile 1">
       <p>Max</p>
     </div>
     <div class="profile-card" onclick="selectProfile('profile2')">
-      <img src="profile2.png" alt="Profile 2">
+      <img src="Milo/assets/images/avatar.png" alt="Profile 2">
       <p>Milo</p>
     </div>
   </div>
